<resources>
    <string name="app_name">WhereAreYou</string>
    <string name="str_appTitle">Where \nAre \nYou</string>
    <string name="str_appDrawerTitle">Where \nAre \nYou Themes</string>
    <string name="str_appTitle_easteregg">There \nYou \nAre</string>
    <string name="str_stats">Statistics</string>
    <string name="str_achievements">Achievements</string>

    <string name="str_btn_take_photo">Take picture</string>
    <string name="str_btn_gallery">Gallery</string>
    <string name="str_img_edit_main_desc">Main Image Editor</string>

    <string name="str_loading">Please wait…</string>

    <string name="str_back">Back</string>
    <string name="str_done">Done</string>

    <string name="str_oot">Weather Only</string>
    <string name="str_way">Where Are You Standard</string>
    <string name="str_sat">Everything</string>
    <string name="str_fact">Fact Of The Day</string>
    <string name="str_temp">Temperature Only</string>
    <string name="str_textBlack">Change text color to black</string>
    <string name="str_textWhite">Change text color to white</string>
    <string name="str_textBlue">Change text color to blue</string>
    <string name="str_textGreen">Change text color to green</string>


    <string name="str_desc_weather">The current weather</string>

    <string name="str_achievement_images_taken_01_name">The first of many</string>
    <string name="str_achievement_images_taken_01_desc">Take your first photo!</string>

    <string name="str_achievement_images_taken_02_name">Hobby photographer</string>
    <string name="str_achievement_images_taken_02_desc">Take 50 photos!</string>

    <string name="str_achievement_images_taken_03_name">Camera master</string>
    <string name="str_achievement_images_taken_03_desc">Take 200 photos!</string>


    <string name="str_achievement_cities_visited_01_name">The journey begins</string>
    <string name="str_achievement_cities_visited_01_desc">First city visited!</string>

    <string name="str_achievement_cities_visited_02_name">Wanderer</string>
    <string name="str_achievement_cities_visited_02_desc">10 cities visited!</string>

    <string name="str_achievement_cities_visited_03_name">World traveller</string>
    <string name="str_achievement_cities_visited_03_desc">50 cities visited!</string>

    <string name="str_achievement_secret_01_name">\0???</string>
    <string name="str_achievement_secret_01_desc">Found the main menu easter egg!</string>

    <string name="str_share_image">Share Image</string>

    <string name="str_goto_credits">Credits</string>
    <string name="str_credits">Icons:
        \n\nIcons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a>
        \n\nIcons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a>
        \n\n\n\nOther libraries used:
        \n\nGlide made by bumptech (https://github.com/bumptech/glide)
        \n\nTimber by Jake Wharton (https://github.com/JakeWharton/timber), licensed under the Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0)
        \n\nGson by Google Inc. (https://github.com/google/gson), licensed under the Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0)
        \n\nretrofit2 by square (https://github.com/square/retrofit), licensed under the Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0)
        \n\n\n\nApp developed with ♥ by Jonathan M. and Felix K.</string>

</resources>
