<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewImageActivity">
    <!--tools:openDrawer="start"-->

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_edit_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/str_img_edit_main_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- All the Text- and Imageviews that are importen for the templates-->
        <!-- Where Are You template-->
        <TextView
            android:id="@+id/img_edit_tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/col_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/img_edit_LatnLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:shadowColor="@color/col_black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="4"
            android:text="@string/str_loading"
            android:textColor="@color/col_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/img_edit_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:shadowColor="@color/col_black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="4"
            android:text="@string/str_loading"
            android:textColor="@color/col_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/img_edit_icon"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/str_desc_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/noun_timer_1678470" />

    </android.support.constraint.ConstraintLayout>


    <!-- Container for contents of drawer-->
    <android.support.design.widget.NavigationView
        android:id="@+id/img_edit_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>
    <!---->

</android.support.v4.widget.DrawerLayout>